fix filters sidebar overflow

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -974,6 +974,10 @@ video {
   overflow: scroll;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
